kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/import_merging/src/export_nat_3.ph
pub(pack) use super.Nat as NicknamedNat;
